# fullstack-rust-iced

./: LICENSE  README.md
client-shared/: Cargo.toml
client-shared/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/src/: lib.rs
web/: Cargo.toml  build.sh  opt.sh  release_build.sh
web/src/: lib.rs
