[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "=0.2.105"

[dependencies.iced]
version = "0.14"
default-features = false
features = ["advanced", "wgpu", "webgl", "fira-sans"]


[dependencies.client-shared]
path = "../client-shared"
